feat: add profile api (ongoing)
