# swagger-docs/swagger.json
@@ -557,6 +557,23 @@
           }
         }
       }
+    },
+    "/v1/user/profile/": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "email",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   }
 }
